--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -109,6 +109,7 @@
     "kolorist": "^1.8.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.8",
+    "mlly": "^1.7.4",
     "open": "^10.1.0",
     "rollup-plugin-visualizer": "^5.13.1",
     "sass-embedded": "^1.83.0",
