chore: migrate monorepo to eslint v9 (#17934)
* chore: migrate to eslint v9

* chore: make more changes for eslint v9 migration

* chore: enable cache for eslint

* chore(vite-plugin): consolidate eslint config

* chore: adjust jsconfig files

* chore(docs): remove outdated stylintrc file
which was for Stylus

* chore: include all projects in VS Code ESLint extension
and simplify it by using mode: auto

* chore: exclude dist directories from VS Code search

* chore: remove failing postinstall script
which runs quasar prepare, which requires ui package to be built due to logic in vite-plugin
removing at least until #17935 gets merged

* chore: rename prepare to prepare:types to avoid unintentional runs
forgot prepare was a special script

--- a/utils/render-ssr-error/src-ui/jsconfig.json
+++ b/utils/render-ssr-error/src-ui/jsconfig.json
@@ -5,35 +5,9 @@
       "src/*": [
         "src/*"
       ],
-      "app/*": [
-        "*"
-      ],
-      "components/*": [
-        "src/components/*"
-      ],
-      "layouts/*": [
-        "src/layouts/*"
-      ],
-      "pages/*": [
-        "src/pages/*"
-      ],
-      "assets/*": [
-        "src/assets/*"
-      ],
-      "boot/*": [
-        "src/boot/*"
-      ],
-      "stores/*": [
-        "src/stores/*"
-      ],
-      "vue$": [
-        "node_modules/vue/dist/vue.runtime.esm-bundler.js"
+      "quasar": [
+        "../../../ui/*"
       ]
     }
-  },
-  "exclude": [
-    "dist",
-    ".quasar",
-    "node_modules"
-  ]
+  }
 }
