--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,19 +2,15 @@
   "eslint.format.enable": false,
   "editor.formatOnSave": false,
   "eslint.workingDirectories": [
-    "./app-vite",
-    "./app-webpack",
-    "./cli",
-    "./create-quasar",
-    "./docs",
-    "./ui",
-    "./utils/render-ssr-error",
-    "./utils/ssl-certificate",
-    "./vite-plugin"
+    { "mode": "auto" }
   ],
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "eslint.validate": ["javascript", "vue"]
+  "eslint.validate": ["javascript", "vue"],
+
+  "search.exclude": {
+    "**/dist": true,
+  }
 }
