--- a/utils/eslint-config/package.json
+++ b/utils/eslint-config/package.json
@@ -2,14 +2,18 @@
   "name": "eslint-config-quasar",
   "description": "ESLint config for Quasar monorepo",
   "version": "0.0.1",
+  "type": "module",
+  "main": "index.js",
   "dependencies": {
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-n": "^17.10.2",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-vue": "^9.28.0"
+    "eslint-plugin-import-x": "^4.9.3",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
+    "neostandard": "^0.12.1",
+    "vue-eslint-parser": "^10.1.1"
   },
   "peerDependencies": {
-    "eslint": "^8.57.1"
+    "eslint": "^9.0.0"
   }
 }
