--- a/extras/package.json
+++ b/extras/package.json
@@ -54,6 +54,11 @@
       "import": "./ionicons-v7/index.mjs",
       "require": "./ionicons-v7/index.js"
     },
+    "./ionicons-v8": {
+      "types": "./ionicons-v8/index.d.ts",
+      "import": "./ionicons-v8/index.mjs",
+      "require": "./ionicons-v8/index.js"
+    },
     "./line-awesome": {
       "types": "./line-awesome/index.d.ts",
       "import": "./line-awesome/index.mjs",
@@ -158,7 +163,7 @@
     "@fortawesome/fontawesome-free": "6.7.2",
     "@mdi/font": "7.4.47",
     "@mdi/svg": "7.4.47",
-    "@xmldom/xmldom": "0.9.7",
+    "@xmldom/xmldom": "0.9.8",
     "animate.css": "4.1.1",
     "bootstrap-icons": "^1.13.1",
     "cross-fetch": "^4.1.0",
@@ -168,6 +173,6 @@
     "ionicons": "8.0.8",
     "line-awesome": "1.3.0",
     "themify-icons": "github:lykmapipo/themify-icons",
-    "tinyglobby": "^0.2.10"
+    "tinyglobby": "^0.2.13"
   }
 }
